[project]
name = "reimagined-doodle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
reimagined-doodle = { workspace = true }

[dependency-groups]
dev = [
    "reimagined-doodle",
]
